# sparktrail

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  repo-infra-scan.yml
scripts/: install  sparktrail
tests/: test_main.py
