[tool.poetry]
name = "sparktrail"
version = "0.1.0"
description = ""
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^4.1.1"
ipython = "^8.38.0"
boto3 = "^1.42.39"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
