[project]
name = "sparktrail"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.6",
    "duckdb>=1.4.0",
    "ipython>=8.39.0",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.43.9",
    "mypy[faster-cache]>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = [
    "D1",      # missing docstrings (too noisy)
    "D2",      # docstring formatting (too opinionated)
    "D4",      # docstring style (too opinionated)
    "ANN",     # type annotations enforced by mypy instead
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
    "PLC0415", # import not at top level (intentional lazy imports)
    "PLR2004", # magic values (too noisy for simple branching)
    "PLR0913", # too many arguments
    "S101",    # assert in tests
    "FBT",     # boolean trap (too strict for CLI tools)
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "D", "SLF001"]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
